--- a/exercise-42.org
+++ b/exercise-42.org
@@ -12,9 +12,9 @@ Implement bounded queue as ring with overwrite semantics
 
 - [X] Reset first element index when no more elements are left in the queue
 
-- [-] Overwrite from beginning when queue is full
+- [X] Overwrite from beginning when queue is full
   + [X] Implement simple case
-  + [ ] Add another testcase that continues using the queue after elements have been overwritten
+  + [X] Add another testcase that continues using the queue after elements have been overwritten
 
 ** Tests
 
